Get auth token working through API
