# swagger/v1/swagger.json
@@ -5,12 +5,26 @@
     "version": "v1",
     "description": "This is the ESR API. For more information visit <a href=\"https://github.com/sardjv/esr_api\">github.com/sardjv/esr_api</a>."
   },
+  "securityDefinitions": {
+    "JWT": {
+      "description": "The JSON Web Token from Auth0 for authentication.",
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
+  },
   "paths": {
     "/api/v1/absence_records/{id}": {
       "get": {
         "summary": "absence record",
         "tags": [
           "AbsenceRecord"
+        ],
+        "security": [
+          {
+            "JWT": {
+            }
+          }
         ],
         "produces": [
           "application/vnd.api+json"
@@ -38,6 +52,12 @@
         "summary": "absence records",
         "tags": [
           "AbsenceRecord"
+        ],
+        "security": [
+          {
+            "JWT": {
+            }
+          }
         ],
         "produces": [
           "application/vnd.api+json"
